[build-system]
requires = ["setuptools>=80.3.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splent_feature_reset"
version = "1.1.0"
requires-python = ">=3.13"
authors = [{ name = "DiversoLab", email = "diversolab@us.es" }]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.splent.contract]
description = "Password reset feature: forgot password and token-based reset flow"

[tool.splent.contract.provides]
routes = ["/reset/forgot", "/reset/password/<token>"]
blueprints = ["reset_bp"]
models = ["ResetToken"]
commands = []

[tool.splent.contract.requires]
features = ["mail"]
env_vars = []
